lib/biodiversity/parser/scientific_name_dirty.treetop
grammar ScientificNameDirty
  include ScientificName

  rule scientific_name
    super
  end
  
  rule authors_separator
    "and" {
      def apply(a,b)
        a.value + " & " + b.value
      end

      def details(a,b)
        {:authors => {:names => a.details[:authors][:names] + b.details[:authors][:names]}}
      end
    }
    /
    super
  end
  
  rule year
    [0-9] [0-9A-Za-z\?\-]+ {
      def value
        text_value
      end
      def details
        {:year => value}
      end
    }
    /
    super
  end

end
